# chainfs

./: .gitignore  .project  NOTICE  README  eclipse-formatter.xml  pom.xml
.github/workflows/: build.yml
src/main/java/com/github/chainfs/: ASTNode.java  CreateNode2.java  FileImporter.java  GenerateChainFSStructure.java  ModularDivision.java  NumberFormatUtils.java  PKTreeManager.java
src/main/java/com/github/chainfs/ecc/: BigIntPolyFactorization.java  ChineseRemainderTheorem.java  ChineseRemainderTheoremOriginal.java  ECCurve.java  ECPoint.java  FrobeniusEigenvalues.java  Point.java  PolyBuilder.java  PrimeGenerator.java  Residue.java  Secp256k1EC.java
src/main/java/com/github/chainfs/ecc2/: DivisionPolynomial.java  DivisionPolynomialWithY.java  Secp256k1.java  TestSecp256k1.java
src/main/java/com/github/chainfs/ecc3/: ContinuedFraction.java  ExactMath.java
src/main/java/com/github/chainfs/ecc4/: PiConvergence.java
src/main/java/com/github/chainfs/ecc9/: Ed25519Curve.java  NISTP384ECDSA.java  NistP256Curve.java  Point.java  Secp256k1EC.java
src/main/java/com/github/chainfs/ecdnist/: NistP521EC.java
src/main/java/com/github/chainfs/ecdsa/: ECDSASigner.java  HMACSHA256.java  RFC6979Nonce.java  SHA256Hash.java
src/main/java/com/github/chainfs/v2/: Base58.java  Bech32m.java  BitcoinPublicKeyCompressor.java  CreateNode3.java  EncodingUtils.java  EthereumAddress.java  LegacyBitcoinAddressGenerator.java  MultiSlotFileCounter.java  NLPChat.java  NestedSegwitAddress.java  RequestContext.java  SafeFilename.java  TaprootAddress.java  UtilityToFindABitcoinAddressFromAPublicKey.java
src/main/java/com/github/chainfs/v2/io/: Folder.java
src/main/java/com/github/chainfs/v2/map/: NLPCommandLogManager.java  NLPProcessor.java  PlatformLogger.java
src/main/java/com/github/chainfs/v4/: CreateSatoshiNode.java  FS3DRef.java  FS4DRef.java  FSOps.java  FSUtils.java  InitParameters.java  SatoshiPoint.java  UnlimitedScaleMap.java
src/main/windows-x64-asm/: CMakeLists.txt  secp256k1.asm
src/test/java/com/github/chainfs/: AppTest.java
src/test/java/com/github/chainfs/ecc9/test/: Ed25519CurveTest.java  FractionArithmeticTest.java  FractionEdgeTests.java  FractionPropertiesSuite.java  FractionPropertiesTest.java  NISTP384ECDSATest.java  NistP256CurveTest.java  PointAtInfinityTest.java  Secp256k1ECFractionMultiplicationTests.java  Secp256k1ECTest.java  Secp256k1ECTests.java  TestNISTP384ECDSA.java
src/test/java/com/github/chainfs/ecdnist/: NistP521ECTest.java
(+4 files in other folders)
